Community Edition Build 0.9.180:

* NEW: RAR5 Support (Default & SharpCompress)
* NEW: Added Virtual Tags. You can set any combination of field in a single one. Can be used with grouping, sorting, smart lists. Configure them in Preferences => Library => Virtual Tags. BACKUP YOUR DB, IF YOU PLAN ON GOING BACK TO AN OLDER VERSION. USING A VIRTUAL TAG IN A SMART LIST AND OPENING AN OLDER VERSION WOULD RESULT IN A DATABASE CORRUPTED MESSAGE. YOU NEED TO REMOVE ANY OF THESE LISTS BEFORE GOING BACK.
* NEW: Added the Git version to the Splash Screen, to more easily identify bugs in specific releases.
* NEW: Added the "-local" command line switch, to have the program load on portable mode.
* NEW: Added links to The Organizer guide to the online manual help system
* NEW: Added the possibility for unknown elements that may have been added my other software to the ComicInfo.xml to be kept, these are also saved in the database.
* NEW: Added possibility to add articles that terminate with an apostrophe in IgnoredArticles.
* NEW: Added French articles (Le, La, Les, L') as default in IgnoredArticles.

* CHANGE: Updated to .NET Framework v4.8.
* CHANGE: Updated the Splash Screen and Renamed the Program to Community Edition, this means that a new config folder will be used %appdata%\cYo\ComicRack Community Edition. 
* CHANGE: Removed Android Validation of apk signature (so we can use the cracked version). Has no incidence on whether the sync icon appears.
* CHANGE: Updated default sort to be natural sorting (numeric).
* CHANGE: Switched MySQl library to MySQLConnector for better speed & compatibility with MariaDB (Yes current versions work).
* CHANGE: Alternate config (-ac) can now be used with portable mode (UseLocalSettings) (-local).
* CHANGE: Removed everything to do with Validation/Donation/PayPal.
* CHANGE: Removed everything to do with Twitter.
* CHANGE: Updated SharpZipLib to v1.4.2.
* CHANGE: Updated SharpCompress to v0.36.
* CHANGE: Updated WindowsCodePack to V1.15.