@@ -167,7 +167,7 @@
 ; This is the color of the page curl for thumbnails
 ; ThumbnailPageCurlColor = LightBlue
 
-; Sets if page bows are drawn on thumbails
+; Sets if page bows are drawn on thumbnails
 ; ThumbnailPageBow = true
 
 ; This sets how rating stars are displayed on thumbnails
@@ -224,8 +224,9 @@
 ; ------------------------------------------------------------------
 ; PDF
 
-; Set this to true to always use the built in PDF parser, even when ghostscript is installed
-; DisableGhostscript = true
+; Set what engine is used for PDF files. Changing this setting to Ghostscript requires it to be installed, or it will default to Pdfium.
+; Valid values are Pdfium, Native, Ghostscript
+; PdfEngineToUse = Pdfium
 
 ; This is an override for specifying the direct path to ghostscript (if ComicRack somehow fails to detect)
 ; GhostscriptExecutable =
