@@ -1,6 +1,7 @@
 Community Edition Build 0.9.180:
 
 * NEW: RAR5 Support (Default & SharpCompress)
+* NEW: New PDF Engine using Google's PDFium, this is now the  default. Check in the ComicRack.ini file to replace the engine.
 * NEW: Added Virtual Tags. You can set any combination of field in a single one. Can be used with grouping, sorting, smart lists. Configure them in Preferences => Library => Virtual Tags. BACKUP YOUR DB, IF YOU PLAN ON GOING BACK TO AN OLDER VERSION. USING A VIRTUAL TAG IN A SMART LIST AND OPENING AN OLDER VERSION WOULD RESULT IN A DATABASE CORRUPTED MESSAGE. YOU NEED TO REMOVE ANY OF THESE LISTS BEFORE GOING BACK.
 * NEW: Added the Git version to the Splash Screen, to more easily identify bugs in specific releases.
 * NEW: Added the "-local" command line switch, to have the program load on portable mode.
@@ -33,6 +34,7 @@ Community Edition Build 0.9.180:
 * CHANGE: Made Tags be saved inside the ComicInfo.xml. First Sync after the update will cause all the data to be updated, so a slower sync is expected. (will this mess with other programs that uses the ComicInfo.xml?)
 * CHANGE: Changed ParallelConversions from 8 to the Number of Processor. ini says it was related to the number of Processor, but I do not see any evidence for that setting. This only increases the number of pages it converts at the same time. 
 * CHANGE: Replaced the old news by the Community Edition commit history.
+* CHANGE: Replaced the ComicRack.ini setting of DisableGhostscript by PdfEngineToUse, that let's you choose between Pdfium, Native & Ghostscript (if installed).
  
 * BUGFIX: Fixed crash when the clipboard contains some objects while the program is idle. The check should now only happen on a right-click and not in the background. It should at least lessen the frequency of the crash, maybe remove it completely. 
 * BUGFIX: Fixed smartlist "in range" for dates, the second field wasn't taken into account.
